# diffusion2D

./: Dockerfile  diffusion2d.py  output.py  pyproject.toml
