[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "mgaimann-diffusion2D"
authors = [
    {name = "Miguel Gaimann", email = "miguelgaimann@roflcopter.com"}
]
version = "0.0.1"
description = "A package for solving the 2D diffusion equation"
readme = "README.md"
keywords = ["diffusion", "2D", "finite difference"]
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "numpy",
    "matplotlib"
]
urls = [
    {name = "Source Code", url = "https://github.com/mgaimann/diffusion2D"}
]
